--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>MarkMyPaper</title>
 </head>
 <body>
-    <p>Markmypaper</p>
+    <p>Markmypaper</p><br>
+    <p>Your grading companion</p>
 </body>
 </html>
