--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MarkMyPaper</title>
+    <link rel="stylesheet" href="./static/styles.css">
 </head>
 <body>
-    <p>Markmypaper</p><br>
-    <p>Your grading companion</p>
+    <nav>
+        <div class="container">
+            <div class="leftside">
+                <div>About</div>
+                <div>Contact Us</div>
+                <div>Login</div>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
