--- a/templates/trial.html
+++ b/templates/trial.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start Your Free Trial | Mark My Paper</title>
+    <title>Start Your Free Trial - Mark My Paper</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -21,7 +21,7 @@
         }
 
         * {
-            margin: 0;
+            margin: 1;
             padding: 0;
             box-sizing: border-box;
             font-family: 'Inter', 'Poppins', sans-serif;
